html plus pictures

--- a/index.html
+++ b/index.html
@@ -30,9 +30,35 @@
 <p>My <i>favorite</i> thing about programming is the freedom of creativity.</p>
 
 <h3>About Me</h3>
-  <img 
-    src="" 
-    alt="A Picture of Me"/>
+
+<div class="gallery">
+  <a target="_blank" href="./images/Chelle-Thielson.JPG">
+    <img src="./images/Chelle-Thielson.JPG" alt="Mount Thielson" width="300" height="260">
+  </a>
+  <div class="desc">Climbing Mount Thielson in Oregon</div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="./images/Key-Hole.JPG">
+    <img src="./images/Key-Hole.JPG" alt="Key Hole Sedona" width="250" height="320">
+  </a>
+  <div class="desc">Key Hole in Sedona, Arizona</div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="./images/Humphrey-Summit.JPG">
+    <img src="./images/Humphrey-Summit.JPG" alt="Mount Humphrey Summit" width="300" height="260">
+  </a>
+  <div class="desc">The Summit of Mount Humphrey</div>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="./images/Organ-Pipe.JPG">
+    <img src="./images/Organ-Pipe.JPG" alt="Organ Pipe National Monument" width="300" height="260">
+  </a>
+  <div class="desc">Under the arch in Organ Pipe National Monument</div>
+</div>
+
   <p>
     I'm baby pour-over single-origin coffee cardigan scenester you probably haven't heard of them jianbing four dollar toast chicharrones tote bag butcher. Actually vegan asymmetrical affogato cliche. Adaptogen raclette cloud bread photo booth literally schlitz austin hammock. Tacos taiyaki trust fund normcore tote bag austin narwhal twee cold-pressed tousled vinyl shaman skateboard jianbing yes plz.
 
@@ -53,7 +79,7 @@
       <li>Project 2</li>
       <li>Project 3</li>
   </ul>
-  
+
   <h3>Contact Me</h3>
   <p><b>Phone:</b> (202) 555-1234</p>
   <p><b>Email:</b> <a href="mailto:rachelle.wilson@email.com">rachelle.wilson@email.com</a></p>
