image gallery fix and css style elements

--- a/index.html
+++ b/index.html
@@ -27,38 +27,64 @@
 
 <hr>
 
-<p>My <i>favorite</i> thing about programming is the freedom of creativity.</p>
+<p>My <i>favorite</i> thing about programming is the freedom of creativity. It's as though I've finally escaped the pretty box I've been stuck in.</p>
 
 <h3>About Me</h3>
 
 <div class="gallery">
-  <a target="_blank" href="./images/Chelle-Thielson.JPG">
-    <img src="./images/Chelle-Thielson.JPG" alt="Mount Thielson" width="300" height="260">
+  <a target="_blank" href="./images/Camp-Lake.JPG">
+    <img src="./images/Camp-Lake.JPG" alt="Camp Lake" width="600" height="400">
   </a>
-  <div class="desc">Climbing Mount Thielson in Oregon</div>
+  <div class="desc">Camp Lake below South Sister</div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="./images/Key-Hole.JPG">
-    <img src="./images/Key-Hole.JPG" alt="Key Hole Sedona" width="250" height="320">
+    <img src="./images/Key-Hole.JPG" alt="Key Hole Sedona" width="600" height="400">
   </a>
   <div class="desc">Key Hole in Sedona, Arizona</div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="./images/Humphrey-Summit.JPG">
-    <img src="./images/Humphrey-Summit.JPG" alt="Mount Humphrey Summit" width="300" height="260">
+    <img src="./images/Humphrey-Summit.JPG" alt="Mount Humphrey Summit" width="600" height="400">
   </a>
   <div class="desc">The Summit of Mount Humphrey</div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="./images/Organ-Pipe.JPG">
-    <img src="./images/Organ-Pipe.JPG" alt="Organ Pipe National Monument" width="300" height="260">
+    <img src="./images/Organ-Pipe.JPG" alt="Organ Pipe National Monument" width="600" height="400">
   </a>
-  <div class="desc">Under the arch in Organ Pipe National Monument</div>
+  <div class="desc">Arch in Organ Pipe National Monument</div>
 </div>
 
+<div class="gallery">
+  <a target="_blank" href="./images/Chelle-Thielson.JPG">
+    <img src="./images/Chelle-Thielson.JPG" alt="Mount Thielson" width="600" height="400">
+  </a>
+  <div class="desc">Climbing Mount Thielson in Oregon</div>
+</div>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<hr>
+<div class="body">
   <p>
     I'm baby pour-over single-origin coffee cardigan scenester you probably haven't heard of them jianbing four dollar toast chicharrones tote bag butcher. Actually vegan asymmetrical affogato cliche. Adaptogen raclette cloud bread photo booth literally schlitz austin hammock. Tacos taiyaki trust fund normcore tote bag austin narwhal twee cold-pressed tousled vinyl shaman skateboard jianbing yes plz.
 
@@ -71,6 +97,8 @@
     Everyday carry try-hard bodega boys, wayfarers authentic kombucha +1 flexitarian kogi. Fingerstache pork belly locavore fashion axe art party schlitz gastropub raclette yr af everyday carry cliche keytar humblebrag. Tbh hot chicken activated charcoal, ugh church-key truffaut pinterest salvia fashion axe trust fund meh. Fixie distillery pok pok, letterpress literally yr cliche la croix chicharrones vape next level. Typewriter art party health goth quinoa ramps man braid celiac before they sold out af paleo.
     
     Dummy text? More like dummy thicc text, amirite?
+    </p>
+    </div>
 
   <h3>My Projects</h3>
   
