centered headings, styled h3

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <hr>
 
-<p>My <i>favorite</i> thing about programming is the freedom of creativity. It's as though I've finally escaped the pretty box I've been stuck in.</p>
+<p>My <i>favorite</i> thing about programming is the freedom of creativity. I feel as though I'm engaged in the problem-solving of materializing <i>dreams</i>.</p>
 
 <h3>About Me</h3>
 
